--- a/public/login.html
+++ b/public/login.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-
+<img src="images/logo.png" alt="Logo" style="width: 120px;" />
 <html lang="tr">
 <head>
 <meta charset="utf-8"/>
